# cpp-opengl-renderer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.specify/: init-options.json
.specify/memory/: constitution.md
cmake/: dependencies.cmake
res/shaders/: basic.frag  basic.vert
specs/001-opengl-3d-renderer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-opengl-3d-renderer/checklists/: requirements.md
specs/001-opengl-3d-renderer/contracts/: module-interfaces.md
src/: main.cpp
src/camera/: Camera.cpp  Camera.hpp
src/core/: Application.cpp  Application.hpp  Window.cpp  Window.hpp
src/renderer/: GLCheck.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
